package A18_DungeonCrawl;

import java.util.List;

public class Dungeon {
    List<Chapter> chapters;
}
