package A18_DungeonCrawl;

public class Main {
    public static void main(String[] args) {
        Game g = new Game();
        g.run();
    }
}
