package A18_DungeonCrawl;

public abstract class Race {
}
