package A18_DungeonCrawl.items.effects;

import A18_DungeonCrawl.units.Unit;

public class ActiveEffect implements Effect{
    private Integer duration;
    private String triggerCondition;

    //TODO Methoden apply remove fertig stellen
    @Override
    public void apply(Unit unit) {

    }

    @Override
    public void remove(Unit unit) {

    }
}
