package A18_DungeonCrawl.items.effects;

import A18_DungeonCrawl.units.Unit;

import java.util.Map;

public class PassiveEffect implements Effect{

    private Map<String,Double> attributeBonus;

    //TODO Methoden remove apply fertig stellen
    @Override
    public void apply(Unit unit) {

    }

    @Override
    public void remove(Unit unit) {

    }
}
