package A18_DungeonCrawl.units;

public class Monster {
}
